--- a/www/css/custom[1].css
+++ b/www/css/custom[1].css
@@ -5,6 +5,10 @@
 .ui-footer .ui-title {
 	font-size: 0.8em;
 	font-weight: normal;
+    padding: 0;
+    position: fixed;
+    bottom: 0px;
+
 }
 h3, h4 {
 	margin-bottom: 0;
