--- a/www/css/custom[1].css
+++ b/www/css/custom[1].css
@@ -5,9 +5,17 @@
 .ui-footer .ui-title {
 	font-size: 0.8em;
 	font-weight: normal;
+      clear: both;
+
+    color: Black;
     padding: 0;
+    text-align: center;
+    vertical-align: middle;
+    line-height: normal;
+    margin: 0;
     position: fixed;
     bottom: 0px;
+    width: 100%;
 
 }
 h3, h4 {
